force-app/main/default/objects/QuoteLineItem/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <formula>PricebookEntry.IsActive</formula>
    <label>Active Product</label>
    <type>Checkbox</type>
</CustomField>