force-app/main/default/objects/QuoteLineItem/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <formula>Quote.Opportunity.Project_or_Site_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Info</label>
    <type>Text</type>
</CustomField>