force-app/main/default/objects/QuoteLineItem/fields/Adjusted_Spa_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Spa_Price__c</fullName>
    <formula>if(Approved_Price__c &gt; PricebookEntry.UnitPrice ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Spa Price</label>
    <type>Checkbox</type>
</CustomField>