force-app/main/default/objects/QuoteLineItem/fields/Approval_Review__c.field-meta.xml
<CustomField>
    <fullName>Approval_Review__c</fullName>
    <formula>if( $User.Alias =&apos;swang&apos; &amp;&amp; VP_Price_Review__c =true,true,
if(( $User.Alias =&apos;pmark&apos; || $User.Alias =&apos;admin&apos;)&amp;&amp;  Product_Manager_Review__c  =true,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Review</label>
    <type>Checkbox</type>
</CustomField>