force-app/main/default/objects/QuoteLineItem/fields/ApprovedPriceHiigherLIst__c.field-meta.xml
<CustomField>
    <fullName>ApprovedPriceHiigherLIst__c</fullName>
    <formula>PricebookEntry.UnitPrice &lt;  Approved_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovedPriceHiigherLIst</label>
    <type>Checkbox</type>
</CustomField>