force-app/main/default/objects/QuoteLineItem/fields/Auto_Renewal_Spa__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Spa__c</fullName>
    <formula>if(Text(Quote.Opportunity.Type )=&quot;Auto Renewal&quot;,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Renewal Spa</label>
    <type>Checkbox</type>
</CustomField>