force-app/main/default/objects/QuoteLineItem/fields/Demo_System_Debug__c.field-meta.xml
<CustomField>
    <fullName>Demo_System_Debug__c</fullName>
    <label>Demo-System Debug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>