force-app/main/default/objects/QuoteLineItem/fields/Description_f__c.field-meta.xml
<CustomField>
    <fullName>Description_f__c</fullName>
    <formula>PricebookEntry.Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description f</label>
    <type>Text</type>
</CustomField>