force-app/main/default/objects/QuoteLineItem/fields/End_User_City__c.field-meta.xml
<CustomField>
    <fullName>End_User_City__c</fullName>
    <formula>Quote.Opportunity.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User City</label>
    <type>Text</type>
</CustomField>