force-app/main/default/objects/QuoteLineItem/fields/End_User_State__c.field-meta.xml
<CustomField>
    <fullName>End_User_State__c</fullName>
    <formula>Quote.Opportunity.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User State</label>
    <type>Text</type>
</CustomField>