force-app/main/default/objects/QuoteLineItem/fields/Hot_Swap_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if the SKU is chosen/requested for Hot Swap</description>
    <label>Hot Swap Flag</label>
    <type>Checkbox</type>
</CustomField>