force-app/main/default/objects/QuoteLineItem/fields/Hotswap_Identification__c.field-meta.xml
<CustomField>
    <fullName>Hotswap_Identification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to Identify to update the HotSwap Flag after approving or rejecting the HotSwap</description>
    <label>Hotswap_Identification</label>
    <type>Checkbox</type>
</CustomField>