force-app/main/default/objects/QuoteLineItem/fields/IsStateSpa__c.field-meta.xml
<CustomField>
    <fullName>IsStateSpa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is used in State Spa Syncs. after insert, the spa will look at the opportunity product approval dates. If there is a date, the system will use that date, otherwise the date will be the day of insert</description>
    <label>IsStateSpa</label>
    <type>Checkbox</type>
</CustomField>