force-app/main/default/objects/QuoteLineItem/fields/MarginMultiEdit__c.field-meta.xml
<CustomField>
    <fullName>MarginMultiEdit__c</fullName>
    <description>For Multi Edit</description>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>