force-app/main/default/objects/QuoteLineItem/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Min Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>