force-app/main/default/objects/QuoteLineItem/fields/Opp_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Product Id</label>
    <type>Text</type>
</CustomField>