force-app/main/default/objects/QuoteLineItem/fields/Opportunity_Prodcut__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Prodcut__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;?retURL=/00O12000005mHDC&apos;,PricebookEntry.Product2.ProductCode,&quot;_self&quot; )</formula>
    <label>Opportunity Prodcut</label>
    <type>Text</type>
</CustomField>