force-app/main/default/objects/QuoteLineItem/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <formula>Casesafeid(Quote.OpportunityId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>