force-app/main/default/objects/QuoteLineItem/fields/Opporutunity_Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Opporutunity_Product_Info__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id ,SPA_Product_SKU__c)</formula>
    <label>Opporutunity Product Info</label>
    <type>Text</type>
</CustomField>