force-app/main/default/objects/QuoteLineItem/fields/Original_Req_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Req_Price__c</fullName>
    <label>Product Original Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>