force-app/main/default/objects/QuoteLineItem/fields/PBE_ID__c.field-meta.xml
<CustomField>
    <fullName>PBE_ID__c</fullName>
    <formula>PricebookEntry.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBE ID</label>
    <type>Text</type>
</CustomField>