force-app/main/default/objects/QuoteLineItem/fields/PM_Adjusted_Landed__c.field-meta.xml
<CustomField>
    <fullName>PM_Adjusted_Landed__c</fullName>
    <description>adjusted landed cost to cacluate margin at time of sale when costs will shift enough to recalculate a more distinct margin</description>
    <label>PM Adjusted Landed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>