force-app/main/default/objects/QuoteLineItem/fields/PM_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Approval_Date__c</fullName>
    <label>PM Approval Date</label>
    <type>DateTime</type>
</CustomField>