force-app/main/default/objects/QuoteLineItem/fields/PM_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>PM_Approval_Notes__c</fullName>
    <label>PM Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>