force-app/main/default/objects/QuoteLineItem/fields/PM_Margin_Override__c.field-meta.xml
<CustomField>
    <fullName>PM_Margin_Override__c</fullName>
    <description>when landing cost is over ridden, this field will have the new % amount</description>
    <label>PM Margin Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>