force-app/main/default/objects/QuoteLineItem/fields/PM_Needs_Update__c.field-meta.xml
<CustomField>
    <fullName>PM_Needs_Update__c</fullName>
    <description>Used as filter for Informatica API tool to determine any updates that need to be made to PM Email.</description>
    <formula>Product_Manager_Email__c &lt;&gt;  Product_Manager_Email_P__c</formula>
    <label>PM Needs Update</label>
    <type>Checkbox</type>
</CustomField>