force-app/main/default/objects/QuoteLineItem/fields/Price_Alert__c.field-meta.xml
<CustomField>
    <fullName>Price_Alert__c</fullName>
    <formula>(List_Price__c- Approved_Price__c  )/List_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Alert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>