force-app/main/default/objects/QuoteLineItem/fields/Price_History__c.field-meta.xml
<CustomField>
    <fullName>Price_History__c</fullName>
    <formula>HYPERLINK(&quot;/00O1H000005YQ63?pv1=&quot;&amp;Product2.Name,   Product2.Name  &amp;&quot; Price History&quot; )</formula>
    <label>Price History</label>
    <type>Text</type>
</CustomField>