force-app/main/default/objects/QuoteLineItem/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <formula>Quote.Opportunity.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook</label>
    <type>Text</type>
</CustomField>