force-app/main/default/objects/QuoteLineItem/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>PricebookEntry.Product2.ProductCode</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>