force-app/main/default/objects/QuoteLineItem/fields/Product_Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>Product_Historical_Data__c</fullName>
    <formula>Product2.Name &amp;&quot;    &quot;&amp;HYPERLINK(&quot;/00O1H000005YQ63?pv1=&quot;&amp;Product2.Name, &quot; Price History&quot; )</formula>
    <label>Product &amp; Historical Data</label>
    <type>Text</type>
</CustomField>