force-app/main/default/objects/QuoteLineItem/fields/Product_Manager_Email_P__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Email_P__c</fullName>
    <formula>PricebookEntry.Product2.Product_Manager_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Manager Email P</label>
    <type>Text</type>
</CustomField>