force-app/main/default/objects/QuoteLineItem/fields/Product_Manager_P__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_P__c</fullName>
    <formula>PricebookEntry.Product2.Product_Manager_Name__c</formula>
    <label>Product Manager (P)</label>
    <type>Text</type>
</CustomField>