force-app/main/default/objects/QuoteLineItem/fields/Product_Manager_Review__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Manager Review</label>
    <type>Checkbox</type>
</CustomField>