force-app/main/default/objects/QuoteLineItem/fields/Product_Pillar_P__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_P__c</fullName>
    <formula>PricebookEntry.Product2.Product_Pillar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Pillar P</label>
    <type>Text</type>
</CustomField>