force-app/main/default/objects/QuoteLineItem/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <formula>Product2.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductDescription</label>
    <type>Text</type>
</CustomField>