force-app/main/default/objects/QuoteLineItem/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <description>for use for button ..cannot use quoteId Field</description>
    <formula>QuoteId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteId</label>
    <type>Text</type>
</CustomField>