force-app/main/default/objects/QuoteLineItem/fields/QuoteIsStateSynced__c.field-meta.xml
<CustomField>
    <fullName>QuoteIsStateSynced__c</fullName>
    <formula>Quote.StateSpaSync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteIsStateSynced</label>
    <type>Checkbox</type>
</CustomField>