force-app/main/default/objects/QuoteLineItem/fields/SPA_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Active_Date__c</fullName>
    <label>SPA Active Date</label>
    <type>Date</type>
</CustomField>