force-app/main/default/objects/QuoteLineItem/fields/SPA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Expiration_Date__c</fullName>
    <label>SPA Expiration Date</label>
    <type>Date</type>
</CustomField>