force-app/main/default/objects/QuoteLineItem/fields/Spa_Price_Alert__c.field-meta.xml
<CustomField>
    <fullName>Spa_Price_Alert__c</fullName>
    <formula>if( PricebookEntry.UnitPrice &lt;   Approved_Price__c  , true, false)</formula>
    <inlineHelpText>Auto Alert when Spa Price is below List Price.</inlineHelpText>
    <label>Spa Price Alert</label>
    <type>Checkbox</type>
</CustomField>