force-app/main/default/objects/QuoteLineItem/fields/Spa_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Spa_Product_Detail__c</fullName>
    <formula>HYPERLINK( Id ,  PricebookEntry.Product2.ProductCode )</formula>
    <label>Spa Product Detail</label>
    <type>Text</type>
</CustomField>