force-app/main/default/objects/QuoteLineItem/fields/SPA_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>SPA_Product_SKU__c</fullName>
    <label>SPA Product SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>