force-app/main/default/objects/QuoteLineItem/fields/Spa_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Spa_Quantity__c</fullName>
    <formula>if(text(Quote.Opportunity.Country__c )=&quot;Canada&quot;,  1,   Quantity  )</formula>
    <label>Spa Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>