force-app/main/default/objects/QuoteLineItem/fields/Spiff_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Does not Qualify for a Spiff</description>
    <inlineHelpText>Product Does not Qualify for a Spiff</inlineHelpText>
    <label>Spiff Excluded</label>
    <type>Checkbox</type>
</CustomField>