force-app/main/default/objects/QuoteLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Interest&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Quote Request</fullName>
            </value>
            <value>
                <fullName>Agreed to Purchase</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Decided not to buy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>