force-app/main/default/objects/QuoteLineItem/fields/Update_Forced__c.field-meta.xml
<CustomField>
    <fullName>Update_Forced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Forced</label>
    <type>Checkbox</type>
</CustomField>