force-app/main/default/objects/QuoteLineItem/fields/VP_Price_Review__c.field-meta.xml
<CustomField>
    <fullName>VP_Price_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VP Price Review</label>
    <type>Checkbox</type>
</CustomField>