force-app/main/default/objects/QuoteLineItem/validationRules/Approved_Spas_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Spas_Products</fullName>
    <active>false</active>
    <description>must be added by bid desk</description>
    <errorConditionFormula>isnew() &amp;&amp; $User.Alias != &apos;BidDesk&apos; 
&amp;&amp;  text(Quote.Status) = &apos;Approved&apos;</errorConditionFormula>
    <errorMessage>Only bid desk can add products to approved spas</errorMessage>
</ValidationRule>