force-app/main/default/objects/QuoteLineItem/validationRules/Quote_fields_only_edited_by_admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_fields_only_edited_by_admin</fullName>
    <active>false</active>
    <description>Only admin or Bid desk can edit quote line items.</description>
    <errorConditionFormula>$User.Alias  != &apos;BidDesk&apos;
&amp;&amp; $User.Alias != &apos;admin&apos;
&amp;&amp; $User.Alias != &apos;VITadmin&apos;
&amp;&amp;
(ischanged(UnitPrice) || ischanged(Quantity))</errorConditionFormula>
    <errorMessage>Quantity or Price Request changes must be done through resubmission notes</errorMessage>
</ValidationRule>